--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,15 +1,19 @@
 # Do NOT update manually; changes here will be overwritten by Copier
-_commit: v1.5.0
+_commit: v1.7.0
 _src_path: https://github.com/OCA/oca-addons-repo-template.git
 ci: GitHub
 dependency_installation_mode: PIP
 generate_requirements_txt: false
 include_wkhtmltopdf: false
 odoo_version: 15.0
+org_name: Glo Networks
+org_slug: GlodoUK
 rebel_module_groups: []
 repo_description: This project aims to deal with any generalised modules related to
-  stock, warehousing and logistics of Odoo.
+    stock, warehousing and logistics of Odoo.
 repo_name: Stock and Delivery related addons for Odoo
 repo_slug: stock-delivery
+repo_website: https://github.com/GlodoUK/stock-delivery
 travis_apt_packages: []
 travis_apt_sources: []
+
