--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,8 @@ on:
       - "15.0*"
   push:
     branches:
-      - "15.0*"
+      - "15.0"
+      - "15.0-ocabot-*"
 
 jobs:
   unreleased-deps:
@@ -17,9 +18,10 @@ jobs:
       - run: |
           for reqfile in requirements.txt test-requirements.txt ; do
               if [ -f ${reqfile} ] ; then
+                  result=0
                   # reject non-comment lines that contain a / (i.e. URLs, relative paths)
-                  grep "^[^#].*/" ${reqfile}
-                  if [ $? -eq 0 ] ; then
+                  grep "^[^#].*/" ${reqfile} || result=$?
+                  if [ $result -eq 0 ] ; then
                       echo "Unreleased dependencies found in ${reqfile}."
                       exit 1
                   fi
@@ -34,7 +36,7 @@ jobs:
       matrix:
         include:
           - container: ghcr.io/oca/oca-ci/py3.8-odoo15.0:latest
-            makepot: "true"
+            makepot: "false"
             name: test with Odoo
           - container: ghcr.io/oca/oca-ci/py3.8-ocb15.0:latest
             name: test with OCB
