--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,18 +1,25 @@
 # Do NOT update manually; changes here will be overwritten by Copier
-_commit: v1.7.0
+_commit: v1.14.2
 _src_path: https://github.com/OCA/oca-addons-repo-template.git
 ci: GitHub
 dependency_installation_mode: OCA
 generate_requirements_txt: true
+github_check_license: true
+github_ci_extra_env: {}
+github_enable_codecov: false
+github_enable_makepot: false
+github_enable_stale_action: false
+github_enforce_dev_status_compatibility: false
 include_wkhtmltopdf: false
 odoo_version: 14.0
 org_name: Glo Networks
 org_slug: GlodoUK
 rebel_module_groups: []
 repo_description: This project aims to deal with any generalised modules related to
-  stock, warehousing and logistics of Odoo.
+    stock, warehousing and logistics of Odoo.
 repo_name: Stock Delivery
 repo_slug: stock-delivery
 repo_website: https://github.com/GlodoUK/stock-delivery
 travis_apt_packages: []
 travis_apt_sources: []
+
