--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,8 +1,8 @@
 # Do NOT update manually; changes here will be overwritten by Copier
-_commit: v1.14.2
+_commit: v1.20
 _src_path: https://github.com/OCA/oca-addons-repo-template.git
 ci: GitHub
-dependency_installation_mode: PIP
+convert_readme_fragments_to_markdown: false
 generate_requirements_txt: true
 github_check_license: true
 github_ci_extra_env:
@@ -12,6 +12,7 @@ github_enable_makepot: false
 github_enable_stale_action: false
 github_enforce_dev_status_compatibility: false
 include_wkhtmltopdf: false
+odoo_test_flavor: Both
 odoo_version: 15.0
 org_name: Glo Networks
 org_slug: GlodoUK
@@ -21,6 +22,6 @@ repo_description: This project aims to deal with any generalised modules related
 repo_name: Stock and Delivery related addons for Odoo
 repo_slug: stock-delivery
 repo_website: https://github.com/GlodoUK/stock-delivery
-travis_apt_packages: []
-travis_apt_sources: []
+use_pyproject_toml: false
+use_ruff: false
 
